test/files/neg/t6476.scala
// only the last one doesn't parse
class C {
  mimi"""\ """
  mimi"""\\"""
  mimi"""\"""
  mimi"\ "
  mimi"\\"
  mimi"\"
}
